flux/apps/base/syncthing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    gateway-access: "true"
    istio-injection: enabled
