flux/apps/base/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing/syncthing
          ports:
            - containerPort: 8384
              name: ui
            - containerPort: 22000
              name: sync
          volumeMounts:
            - mountPath: /var/syncthing
              name: syncthing-volume
      volumes:
        - name: syncthing-volume
          persistentVolumeClaim:
            claimName: syncthing-pvc
