flux/apps/base/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - protocol: TCP
      port: 8384
      targetPort: 8384
