flux/apps/base/syncthing/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect
  labels:
    app.kubernetes.io/name: syncthing
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: http
  hostnames:
    - syncthing.stehessel.org
  rules:
    - backendRefs:
        - name: syncthing
          namespace: syncthing
          port: 8384
      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 443
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: auth-redirect-https
  labels:
    app.kubernetes.io/name: syncthing
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - syncthing.stehessel.org
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: auth.stehessel.org
            path:
              type: ReplaceFullPath
              replaceFullPath: /oauth/start?rd=https://podinfo.stehessel.org
            # statusCode: 302
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: syncthing
# labels:
#   app.kubernetes.io/name: syncthing
# spec:
#   parentRefs:
#     - name: gateway
#       namespace: ingress
#       sectionName: https
#   hostnames:
#     - syncthing.stehessel.org
#   rules:
#     - backendRefs:
#         - name: syncthing
#           namespace: syncthing
#           port: 8384
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: syncthing-tcp
  rules:
    - backendRefs:
        - name: syncthing
          namespace: syncthing
          port: 22000
